[gd_scene load_steps=22 format=2]

[ext_resource path="res://Cube.gd" type="Script" id=1]
[ext_resource path="res://Spin_Enemy.tres" type="Animation" id=2]
[ext_resource path="res://HealthBar3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player_Hit.wav" type="AudioStream" id=4]
[ext_resource path="res://Attack.wav" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 1, 1, 1 )

[sub_resource type="NoiseTexture" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true

[sub_resource type="NoiseTexture" id=6]

[sub_resource type="SpatialMaterial" id=7]
next_pass = SubResource( 5 )
flags_transparent = true
flags_no_depth_test = true
params_grow = true
params_grow_amount = 0.016
albedo_color = Color( 0.211765, 0.568627, 0.886275, 1 )
metallic = 0.34
metallic_specular = 0.61
metallic_texture = SubResource( 4 )
normal_enabled = true
normal_scale = 1.0
normal_texture = SubResource( 6 )
refraction_enabled = true
refraction_scale = 0.05
refraction_texture_channel = 0

[sub_resource type="Animation" id=8]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Cube:mesh:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35, 1 ),
"transitions": PoolRealArray( 1, 1, 3.73213, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.6, 0.6, 0.6 ), Vector3( 1.5, 1.5, 1.5 ), Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cube:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.211765, 0.568627, 0.886275, 1 ), Color( 1, 0.843137, 0, 1 ), Color( 0.211765, 0.568627, 0.886275, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cube:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.211765, 0.568627, 0.886275, 1 ), Color( 1, 0, 0, 1 ), Color( 0.211765, 0.568627, 0.886275, 1 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Cube:mesh:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cube:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.211765, 0.568627, 0.886275, 0 ), Color( 0.211765, 0.568627, 0.886275, 1 ) ]
}

[sub_resource type="ViewportTexture" id=11]
viewport_path = NodePath("Viewport")

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0

[sub_resource type="NoiseTexture" id=13]

[sub_resource type="NoiseTexture" id=14]

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 1, 0, 0, 1 )
roughness_texture = SubResource( 14 )
emission_enabled = true
emission = Color( 1, 0.984314, 0, 1 )
emission_energy = 0.08
emission_operator = 0
emission_on_uv2 = false
emission_texture = SubResource( 13 )

[sub_resource type="SphereMesh" id=16]
material = SubResource( 15 )
radius = 0.025
height = 0.05

[node name="EnemyPlaceholder" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Cube" type="CSGMesh" parent="."]
transform = Transform( 0.842836, -0.508426, 0.176438, 0.537864, 0.806869, -0.244265, -0.0181719, 0.300775, 0.953522, -0.01669, -0.00348401, 0.00738335 )
use_in_baked_light = true
mesh = SubResource( 3 )
material = SubResource( 7 )

[node name="Flash" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/Attack = SubResource( 8 )
anims/DamageFlash = SubResource( 9 )
anims/SpawnCube = SubResource( 10 )
anims/Spin_Enemy = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="HealthBar3D" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.480795, 1.03103, 0 )
texture = SubResource( 11 )

[node name="Check_Attack" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="PlayerAttack" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 10.0

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 2400
lifetime = 0.1
one_shot = true
explosiveness = 0.7
randomness = 0.74
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 16 )

[connection signal="input_event" from="." to="." method="_on_Cube_input_event"]
[connection signal="animation_finished" from="Flash" to="." method="_on_AnimPlayer_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Check_Attack" to="." method="_on_Check_Attack_timeout"]
[connection signal="finished" from="PlayerAttack" to="." method="_on_PlayerAttack_finished"]
